:mag: add og title and description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/sword.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zelda1 Bingo</title>
+    <title>The Legend of Zelda Bingo</title>
+    <meta name="description" content="The Bingo for The Legend of Zelda."/>
+    <meta property="og:url" content="https://zelda1-bingo.vercel.app/">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The Legend of Zelda Bingo"/>
+    <meta property="og:description" content="The Bingo for The Legend of Zelda."/>
   </head>
   <body>
     <div id="root"></div>
