:mag: add og image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="The Legend of Zelda Bingo"/>
     <meta property="og:description" content="The Bingo for The Legend of Zelda."/>
+    <meta property="og:image" content="https://zelda1-bingo.vercel.app/bingo.png"/>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://zelda1-bingo.vercel.app/bingo.png" />
   </head>
   <body>
     <div id="root"></div>
